2010-08-10  Roland Grunberg  <rgrunber@redhat.com>

	* src/org/eclipse/linuxtools/profiling/tests/AbstractTest.java
		(createExternalProject): Create an external project.
		(createExternalProjectAndBuild): Build the external project.
		(buildProject): Wrapper for building an ICProject.

2010-08-06  Roland Grunberg  <rgrunber@redhat.com>

	* META-INF/MANIFEST.MF: Switch to using Junit3.

2010-07-26  Elliott Baron  <ebaron@fedoraproject.org>

	* META-INF/MANIFEST.MF: Bump version to 0.7.0.
	* src/org/eclipse/linuxtools/profiling/tests/AbstractTest.java (createConfiguration): Change deprecated method.

2009-12-21  Roland Grunberg  <rgrunber@redhat.com>

	* META-INF/MANIFEST.MF: Make necessary changes for switch from JUnit 3 to JUnit 4.

2009-08-11  Elliott Baron  <ebaron@redhat.com>

	* META-INF/MANIFEST.MF: Bump version to 0.3.0.

2009-08-10  Elliott Baron  <ebaron@redhat.com>

	* META-INF/MANIFEST.MF: Remove unused package.
	* src/org/eclipse/linuxtools/profiling/tests/AbstractTest.java: Remove code that
	turns off indexer and corresponding assertion.

2009-08-07  Andrew Overholt  <overholt@redhat.com>

	* plugin.properties: Change provider from Eclipse.org to Eclipse.

2009-07-30  Elliott Baron  <ebaron@redhat.com>

	* src/org/eclipse/linuxtools/profiling/tests/ProfileTestsPlugin.java: Removed.
	* src/org/eclipse/linuxtools/internal/profiling/tests/ProfileTestsPlugin.java: New file.
	* .project: Enabled API analysis. 
	* META-INF/MANIFEST.MF: Export internal package.

2009-06-23  Elliott Baron  <ebaron@redhat.com>

	* AbstractTest.java (createConfiguration): Throw CoreException.
	(createProject): Use IndexSetupParticipant to control indexer. 

2009-05-12  Elliott Baron  <ebaron@redhat.com>

	* META-INF/MANIFEST.MF: New deps.
	* AbstractTest.java (createProject): Preemptively add ManagedBuild and ScannerConfig
	natures before project is imported for #273079.

2009-04-21  Elliott Baron  <ebaron@redhat.com>
