@@ -1,0 +1,27 @@
+Manifest-Version: 1.0
+Bundle-ManifestVersion: 2
+Bundle-Name: %Bundle-Name.0
+Bundle-SymbolicName: org.eclipse.linuxtools.profiling.tests
+Bundle-Version: 0.7.0.qualifier
+Bundle-Activator: org.eclipse.linuxtools.internal.profiling.tests.ProfileTestsPlugin
+Bundle-Vendor: %Bundle-Vendor.0
+Require-Bundle: org.eclipse.ui,
+ org.eclipse.core.runtime,
+ org.junit;bundle-version="3.8.2"
+Bundle-RequiredExecutionEnvironment: J2SE-1.5
+Bundle-ActivationPolicy: lazy
+Bundle-Localization: plugin
+Export-Package: org.eclipse.linuxtools.internal.profiling.tests,
+ org.eclipse.linuxtools.profiling.tests
+Import-Package: org.eclipse.cdt.build.core.scannerconfig,
+ org.eclipse.cdt.core,
+ org.eclipse.cdt.core.index,
+ org.eclipse.cdt.core.model,
+ org.eclipse.cdt.core.testplugin,
+ org.eclipse.cdt.debug.core,
+ org.eclipse.cdt.managedbuilder.core,
+ org.eclipse.core.resources,
+ org.eclipse.debug.core,
+ org.eclipse.debug.ui,
+ org.eclipse.ui.actions,
+ org.eclipse.ui.wizards.datatransfer
