@@ -1,0 +1,3 @@
+#Properties file for org.eclipse.linuxtools.profiling.tests
+Bundle-Vendor.0 = Eclipse Linux Tools
+Bundle-Name.0 = Profiling Tests Plug-in (Incubation)
