@@ -59,6 +59,7 @@ import org.osgi.framework.Bundle;
 
 public abstract class AbstractTest extends TestCase {
 	private static final String BIN_DIR = "Debug"; //$NON-NLS-1$
+	private static final String IMPORTED_SOURCE_FILE = "primeTest.c"; //$NON-NLS-1$
 	protected ICProject proj;
 		
 	protected ILaunchManager getLaunchManager() {
@@ -132,7 +133,7 @@ public abstract class AbstractTest extends TestCase {
 			throw new CoreException(status);
 		}
 		// Make sure import went well
-		assertNotNull(externalProject.findMember(BIN_DIR));
+		assertNotNull(externalProject.findMember(new Path(IMPORTED_SOURCE_FILE)));
 
 		// Index the project
 		IIndexManager indexMgr = CCorePlugin.getIndexManager();
