@@ -1,0 +1,4 @@
+AbstractTest.Build_cancelled=the project "{0}" build was cancelled, exception message: {1}
+AbstractTest.Build_failed=the build job for the project "{0}" failed, status message: {1}
+AbstractTest.Build_interrupted=the build job for the project "{0}" was interrupted, exception message: {1}
+AbstractTest.No_binary=Locating binary for "{0}" failed.
